# tc

./: .gitignore  Cargo.toml  default.nix
playground/: do.sh  playground.rs
src/: interpret.rs  main.rs  sexp.rs  z3_decl.rs
